--- a/src/assets/_contact.scss
+++ b/src/assets/_contact.scss
@@ -24,6 +24,9 @@
   outline: 2px solid $link-color-accent;
   outline-offset: 2px;
   border-radius: 1em;
+  label {
+    color: $text-color;
+  }
   :is(input, textarea) {
     border-radius: 1em;
     padding: 1em;
