--- a/src/assets/_jobs.scss
+++ b/src/assets/_jobs.scss
@@ -1,11 +1,8 @@
-@use "./variables.scss" as *;
 @use "./resets.scss" as *;
 @use "./utils.scss" as *;
 
 .jobs {
-  // padding-block: 2em 0;
   & h4 {
-    color: $text-color;
     @include display(flex-start, flex-start);
   }
   & h5 {
